refactor(engine): centralize context key validation